# cc2-binary-data

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/cc2/: binary_data.hpp  binary_serializer.hpp  json_serializable.hpp  json_serializer.hpp
include/cc2/asbr/: message_info.hpp  player_color_param.hpp  player_color_param_json.hpp
include/cc2/asbr/binary/: message_info.hpp  player_color_param.hpp
include/cc2/asbr/json/: message_info.hpp  player_color_param.hpp
src/: player_color_param.cpp
src/asbr/: message_info.cpp  player_color_param.cpp
